@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 6.13 Not Released
  - Add dracula color theme
+ - Fix handling URLs with conversation names ending with ".js"
  - Will set MOJO_REVERSE_PROXY based on CONVOS_REVERSE_PROXY
 
 6.12 2021-04-16T09:45:00+0900
